implement login and configure cors and csrf